# fastapi-proxy-test

./: .gitignore  pyproject.toml
app/: main.py
app/routes/: items.py
