[project]
name = "https-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]
